runs/official/feature_haiku_20260301_071229/mcp-remote-direct/ccb_feature_tensorrt-mxfp4-quant-feat-001_mcp-remote-direct/sgonly_tensorrt-mxfp4-quant-feat__cCLhSQk/verifier/syntax_errors.txt
Sorry: IndentationError: unexpected indent (model_config_quant_snippet.py, line 1)cpp/include/tensorrt_llm/common/quantization.h:17:9: warning: #pragma once in main file
   17 | #pragma once
      |         ^~~~
cpp/include/tensorrt_llm/common/quantization.h:19:10: fatal error: tensorrt_llm/common/config.h: No such file or directory
   19 | #include "tensorrt_llm/common/config.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
cpp/tensorrt_llm/nanobind/bindings_quant_part.cpp:2:9: error: expected unqualified-id before ‘.’ token
    2 |         .def_prop_ro("has_w4a8_mxfp4_fp8", &tc::QuantMode::hasW4a8Mxfp4Fp8)
      |         ^
cpp/tests/unit_tests/common/quantizationTest.cpp:17:10: fatal error: gtest/gtest.h: No such file or directory
   17 | #include <gtest/gtest.h>
      |          ^~~~~~~~~~~~~~~
compilation terminated.
